--- a/posts/020_persona_drift_over_time/persona_drift_over_time.ipynb
+++ b/posts/020_persona_drift_over_time/persona_drift_over_time.ipynb
@@ -1200,7 +1200,15 @@
         "\n",
         "We also notice that identity seems to decrease a bit from the start, and faster with 2 people. This might be an indication that because the two LLMs are more direct in communication that they can converge to a common objective/idea faster and maintain a lower level of personal identity compared to three LLMs.\n",
         "\n",
-        "Then, looking at speaker fluidity, we can "
+        "Then, looking at speaker fluidity, we can see that around 30 iterations, we can see divergence in the fluidity drops quickly for 3 speakers, potentially indicating a point of accomodation in the conversation. The two speaker conversation also has a similar pattern, but it's delayed. This might mean an obvious accomodation happens later on for two speakers. Afterwards, speakers start to trend towards being less malleable in the way their speech changes."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Conclusion\n",
+        "I think we got some good ideas about the dynamics of these kinds of LLM conversations. I hope to see if we can provide even less information and have LLMs select a topic to speak about in a later blog."
       ]
     }
   ],
