--- a/posts/025_scaling_number_of_speakers/index.ipynb
+++ b/posts/025_scaling_number_of_speakers/index.ipynb
@@ -76,7 +76,7 @@
     "# ConvoKit imports\n",
     "from convokit import Corpus, Utterance, Speaker\n",
     "from convokit.text_processing import TextParser\n",
-    "from convokit.politeness_strategies import PolitenessStrategies\n",
+    "from convokit import PolitenessStrategies\n",
     "from convokit.coordination import Coordination\n",
     "\n",
     "load_dotenv(\"../../.env\")\n",
