--- a/posts/030_book_review_5/book_review_5.ipynb
+++ b/posts/030_book_review_5/book_review_5.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "---\n",
         "title: \"Book Review 5\"\n",
-        "description: \"[Your title here]\"\n",
+        "description: \"Finishing Up\"\n",
         "author: \"Eric Zou\"\n",
         "date: \"10/19/2025\"\n",
         "categories:\n",
@@ -20,15 +20,15 @@
       "source": [
         "## What It's About\n",
         "\n",
-        "TODO: Give a quick overview of the book in a way that future-you will actually remember.\n",
+        "This section details more far out issues with AI that include misinformation, overpersonalization and gaining sentience and rebelling. The section also details more advanced capabilities of AI including tool usage, and web surfing.\n",
         "\n",
         "## What I Thought\n",
         "\n",
-        "TODO: Write down the moments where you strongly agreed, strongly disagreed, or felt weirdly conflicted.\n",
+        "I thought it was great that the book discussed some of the more near-term issues facing LLM technology. Misinformation is a huge issue that LLMs can make worse due to the speed at which they can generate content to be pushed to various social media feeds and the internet. As a society, we need to be very vigilant about this type of stuff invading our attentions because it would be a really easy way for a small group of people to gain a large amount of influence quickly. I think that while we shouldm't rule out the extinction possibilities of AI, our focus should skew toward where the technology is today. There's a lot of really interesting capabilities models can do now, like trigger other pieces of software or form parts of crucial workflows, which may either improve productivity or cause unemployment. I think lawmakers definitely need to take larger steps to understand which one is going to actually happen.\n",
         "\n",
         "## Reflecting\n",
         "\n",
-        "TODO: End with one concrete way this book might change how you design or evaluate LLM systems.\n"
+        "Looking at some of the issues of AI, it may be tough to moderate an online chatroom with a mix of agents and humans, because I think it might soon be difficult to tell one from the other. There's also the danger that agents will learn to adapt to the quirks of the environment and cause unhealthy relationships between people and this world, whether it's addiction, negative feelings, or misinformation. I think these kinds of experiments should happen in a controlled environment with plenty of supervision.\n"
       ]
     }
   ],
