--- a/posts/020_persona_drift_over_time/persona_drift_over_time.ipynb
+++ b/posts/020_persona_drift_over_time/persona_drift_over_time.ipynb
@@ -12,7 +12,8 @@
         "categories:\n",
         "  - LLMs\n",
         "  - Conversations\n",
-        "  - Personas"
+        "  - Personas\n",
+        "---"
       ]
     },
     {
