--- a/posts/023_persona_drift_over_time_p2/index.ipynb
+++ b/posts/023_persona_drift_over_time_p2/index.ipynb
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "3d92c56f",
    "metadata": {},
    "outputs": [],
@@ -276,18 +276,25 @@
     "\n",
     "def compute_conclusiveness_score(corpus: Corpus) -> float:\n",
     "    \"\"\"Conclusiveness: Consensus (1) vs. Divergence (10)\"\"\"\n",
+    "    print(\"[DEBUG] compute_conclusiveness_score called\")\n",
     "    try:\n",
     "        # Check if corpus is valid\n",
     "        if corpus is None:\n",
+    "            print(\"[DEBUG] Corpus is None, returning 5.0\")\n",
     "            return 5.0\n",
+    "        \n",
+    "        print(f\"[DEBUG] Corpus type: {type(corpus)}\")\n",
     "        \n",
     "        # Get utterances directly without Coordination transformer (more reliable)\n",
     "        try:\n",
     "            utterances = list(corpus.iter_utterances())\n",
-    "        except (AttributeError, TypeError):\n",
+    "            print(f\"[DEBUG] Retrieved {len(utterances)} utterances\")\n",
+    "        except (AttributeError, TypeError) as e:\n",
+    "            print(f\"[DEBUG] Error getting utterances: {e}\")\n",
     "            return 5.0\n",
     "        \n",
     "        if len(utterances) == 0:\n",
+    "            print(\"[DEBUG] No utterances found, returning 5.0\")\n",
     "            return 5.0\n",
     "        \n",
     "        # Expanded agreement markers (using word boundaries to avoid false positives)\n",
@@ -363,48 +370,97 @@
     "        strong_disagreement_count = 0\n",
     "        moderate_disagreement_count = 0\n",
     "        \n",
+    "        # Debug: sample some utterances to see what we're working with\n",
+    "        sample_texts = []\n",
+    "        texts_processed = 0\n",
+    "        \n",
     "        for utt in utterances:\n",
     "            # Safely get text\n",
     "            try:\n",
     "                if not hasattr(utt, 'text') or not utt.text:\n",
     "                    continue\n",
     "                text_lower = str(utt.text).lower()\n",
-    "            except (AttributeError, TypeError):\n",
+    "                texts_processed += 1\n",
+    "                \n",
+    "                # Collect sample texts for debugging\n",
+    "                if len(sample_texts) < 3:\n",
+    "                    sample_texts.append(text_lower[:200])\n",
+    "            except (AttributeError, TypeError) as e:\n",
     "                continue\n",
     "            \n",
     "            # Count strong agreement (once per utterance)\n",
     "            found_strong_agree = False\n",
     "            for pattern in strong_agreement_patterns:\n",
-    "                if re.search(pattern, text_lower):\n",
-    "                    strong_agreement_count += 1\n",
-    "                    found_strong_agree = True\n",
-    "                    break\n",
+    "                try:\n",
+    "                    match = re.search(pattern, text_lower)\n",
+    "                    if match:\n",
+    "                        strong_agreement_count += 1\n",
+    "                        found_strong_agree = True\n",
+    "                        break\n",
+    "                except Exception as e:\n",
+    "                    # Debug: if pattern matching fails, log it\n",
+    "                    if texts_processed <= 3:  # Only log for first few\n",
+    "                        print(f\"[DEBUG] Pattern match error for '{pattern}': {e}\")\n",
+    "                    continue\n",
     "            \n",
     "            # Count moderate agreement (only if no strong agreement found)\n",
     "            if not found_strong_agree:\n",
     "                for pattern in moderate_agreement_patterns:\n",
-    "                    if re.search(pattern, text_lower):\n",
-    "                        moderate_agreement_count += 1\n",
-    "                        break\n",
+    "                    try:\n",
+    "                        if re.search(pattern, text_lower):\n",
+    "                            moderate_agreement_count += 1\n",
+    "                            break\n",
+    "                    except Exception:\n",
+    "                        continue\n",
     "            \n",
     "            # Count strong disagreement (once per utterance)\n",
     "            found_strong_disagree = False\n",
     "            for pattern in strong_disagreement_patterns:\n",
-    "                if re.search(pattern, text_lower):\n",
-    "                    strong_disagreement_count += 1\n",
-    "                    found_strong_disagree = True\n",
-    "                    break\n",
+    "                try:\n",
+    "                    if re.search(pattern, text_lower):\n",
+    "                        strong_disagreement_count += 1\n",
+    "                        found_strong_disagree = True\n",
+    "                        break\n",
+    "                except Exception:\n",
+    "                    continue\n",
     "            \n",
     "            # Count moderate disagreement (only if no strong disagreement found)\n",
     "            if not found_strong_disagree:\n",
     "                for pattern in moderate_disagreement_patterns:\n",
-    "                    if re.search(pattern, text_lower):\n",
-    "                        moderate_disagreement_count += 1\n",
-    "                        break\n",
+    "                    try:\n",
+    "                        if re.search(pattern, text_lower):\n",
+    "                            moderate_disagreement_count += 1\n",
+    "                            break\n",
+    "                    except Exception:\n",
+    "                        continue\n",
     "        \n",
     "        # Weighted counts (strong markers count more)\n",
     "        total_agreement = strong_agreement_count * 2 + moderate_agreement_count\n",
     "        total_disagreement = strong_disagreement_count * 2 + moderate_disagreement_count\n",
+    "        \n",
+    "        print(f\"[DEBUG] Counts - Strong agree: {strong_agreement_count}, Moderate agree: {moderate_agreement_count}\")\n",
+    "        print(f\"[DEBUG] Counts - Strong disagree: {strong_disagreement_count}, Moderate disagree: {moderate_disagreement_count}\")\n",
+    "        print(f\"[DEBUG] Total agreement: {total_agreement}, Total disagreement: {total_disagreement}\")\n",
+    "        \n",
+    "        # Debug output\n",
+    "        if total_agreement == 0 and total_disagreement == 0:\n",
+    "            print(f\"[DEBUG] No markers found. Processed {texts_processed} utterances from {len(utterances)} total.\")\n",
+    "            if sample_texts:\n",
+    "                print(f\"[DEBUG] Sample texts (first 200 chars each):\")\n",
+    "                for i, text in enumerate(sample_texts, 1):\n",
+    "                    print(f\"  {i}: {text}...\")\n",
+    "            # Try a simple test - check if common words exist at all\n",
+    "            if texts_processed > 0:\n",
+    "                test_text = \" \".join(sample_texts[:3]) if sample_texts else \"\"\n",
+    "                if test_text:\n",
+    "                    # Check if basic words exist\n",
+    "                    has_yes = 'yes' in test_text\n",
+    "                    has_but = 'but' in test_text\n",
+    "                    has_agree = 'agree' in test_text\n",
+    "                    print(f\"[DEBUG] Simple word check - 'yes': {has_yes}, 'but': {has_but}, 'agree': {has_agree}\")\n",
+    "                    # Try a simple regex test\n",
+    "                    test_match = re.search(r'\\byes\\b', test_text)\n",
+    "                    print(f\"[DEBUG] Regex test for '\\\\byes\\\\b': {test_match is not None}\")\n",
     "        \n",
     "        # Handle edge cases\n",
     "        if total_agreement == 0 and total_disagreement == 0:\n",
@@ -420,33 +476,58 @@
     "        # Calculate ratio and score\n",
     "        agreement_ratio = total_agreement / total_disagreement\n",
     "        \n",
-    "        # Map ratio to 1-10 scale\n",
+    "        print(f\"[DEBUG] Agreement ratio: {agreement_ratio:.3f}\")\n",
+    "        \n",
+    "        # Map ratio to 1-10 scale using a smoother continuous function\n",
     "        # High ratio (lots of agreement) -> low score (consensus)\n",
     "        # Low ratio (lots of disagreement) -> high score (divergence)\n",
-    "        if agreement_ratio >= 3.0:\n",
-    "            # Strong consensus\n",
-    "            score = 1.0 + (1.0 / agreement_ratio) * 2.0\n",
-    "        elif agreement_ratio >= 1.5:\n",
-    "            # Moderate consensus\n",
-    "            score = 3.0 + (1.0 / agreement_ratio) * 2.0\n",
-    "        elif agreement_ratio <= 0.33:\n",
-    "            # Strong divergence\n",
-    "            score = 10.0 - (agreement_ratio * 3.0)\n",
-    "        elif agreement_ratio <= 0.67:\n",
-    "            # Moderate divergence\n",
-    "            score = 8.0 - (agreement_ratio * 2.0)\n",
+    "        # Ratio = 1.0 (balanced) -> score = 5.0\n",
+    "        \n",
+    "        # Use logarithmic scaling for smoother transitions\n",
+    "        # When ratio = 1.0, log(1.0) = 0, so score = 5.0\n",
+    "        # When ratio -> infinity (all agreement), score -> 1.0\n",
+    "        # When ratio -> 0 (all disagreement), score -> 10.0\n",
+    "        \n",
+    "        import math\n",
+    "        \n",
+    "        if agreement_ratio > 0:\n",
+    "            # Use log scale: log(ratio) maps to score\n",
+    "            # log(1) = 0 -> score 5.0\n",
+    "            # log(10) ≈ 2.3 -> score ~1.0 (strong consensus)\n",
+    "            # log(0.1) ≈ -2.3 -> score ~10.0 (strong divergence)\n",
+    "            \n",
+    "            log_ratio = math.log(agreement_ratio)\n",
+    "            \n",
+    "            # Map log_ratio from [-2.3, 2.3] to [10, 1]\n",
+    "            # When log_ratio = 0 (ratio = 1.0), score = 5.0\n",
+    "            # When log_ratio = 2.3 (ratio ≈ 10), score ≈ 1.0\n",
+    "            # When log_ratio = -2.3 (ratio ≈ 0.1), score ≈ 10.0\n",
+    "            \n",
+    "            # Linear mapping: log_ratio of 0 -> 5.0, log_ratio of 2.3 -> 1.0, log_ratio of -2.3 -> 10.0\n",
+    "            if log_ratio >= 0:\n",
+    "                # Consensus range: log_ratio [0, 2.3] -> score [5.0, 1.0]\n",
+    "                score = 5.0 - (log_ratio / 2.3) * 4.0\n",
+    "            else:\n",
+    "                # Divergence range: log_ratio [-2.3, 0] -> score [10.0, 5.0]\n",
+    "                score = 5.0 - (log_ratio / 2.3) * 5.0\n",
     "        else:\n",
-    "            # Balanced\n",
-    "            score = 5.0\n",
+    "            # Shouldn't happen (we check for total_disagreement == 0 above)\n",
+    "            score = 10.0\n",
     "        \n",
-    "        return max(1.0, min(10.0, score))\n",
+    "        score = max(1.0, min(10.0, score))\n",
+    "        print(f\"[DEBUG] Computed score: {score:.3f}\")\n",
     "        \n",
-    "    except AttributeError:\n",
+    "        return score\n",
+    "        \n",
+    "    except AttributeError as e:\n",
     "        # Handle missing attributes gracefully\n",
+    "        print(f\"[DEBUG] AttributeError in compute_conclusiveness_score: {e}\")\n",
     "        return 5.0\n",
     "    except Exception as e:\n",
     "        # Log the actual error for debugging (but don't fail)\n",
-    "        print(f\"Error computing conclusiveness score: {type(e).__name__}: {str(e)}\")\n",
+    "        print(f\"[DEBUG] Exception in compute_conclusiveness_score: {type(e).__name__}: {str(e)}\")\n",
+    "        import traceback\n",
+    "        print(f\"[DEBUG] Traceback: {traceback.format_exc()}\")\n",
     "        return 5.0\n",
     "\n",
     "def compute_speaker_identity_score(corpus: Corpus) -> float:\n",
@@ -572,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "77d57d41",
    "metadata": {},
    "outputs": [
@@ -587,7 +668,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Running 2-speaker conversation:   2%|▏         | 1/50 [00:01<01:15,  1.55s/it]"
+      "Running 2-speaker conversation: 100%|██████████| 50/50 [05:08<00:00,  6.17s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\n=== 2-Speaker Results ===\n",
+      "Dynamic (Collaborative ↔ Competitive): 5.32/10\n",
+      "Conclusiveness (Consensus ↔ Divergence): 5.00/10\n",
+      "Speaker Identity (Similarity ↔ Diversity): 5.25/10\n",
+      "Speaker Fluidity (Malleability ↔ Consistency): 4.65/10\n"
      ]
     }
    ],
@@ -606,10 +698,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "id": "4d1974b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG] compute_conclusiveness_score called\n",
+      "[DEBUG] Corpus type: <class 'convokit.model.corpus.Corpus'>\n",
+      "[DEBUG] Retrieved 46 utterances\n",
+      "[DEBUG] Counts - Strong agree: 13, Moderate agree: 14\n",
+      "[DEBUG] Counts - Strong disagree: 2, Moderate disagree: 36\n",
+      "[DEBUG] Total agreement: 40, Total disagreement: 40\n",
+      "\\n=== 2-Speaker Results ===\n",
+      "Dynamic (Collaborative ↔ Competitive): 5.32/10\n",
+      "Conclusiveness (Consensus ↔ Divergence): 5.00/10\n",
+      "Speaker Identity (Similarity ↔ Diversity): 5.25/10\n",
+      "Speaker Fluidity (Malleability ↔ Consistency): 4.65/10\n"
+     ]
+    }
+   ],
+   "source": [
+    "metrics_2speaker = evaluate_conversation(conv_2speaker)\n",
+    "\n",
+    "print(\"\\\\n=== 2-Speaker Results ===\")\n",
+    "print(f\"Dynamic (Collaborative ↔ Competitive): {metrics_2speaker['dynamic']:.2f}/10\")\n",
+    "print(f\"Conclusiveness (Consensus ↔ Divergence): {metrics_2speaker['conclusiveness']:.2f}/10\")\n",
+    "print(f\"Speaker Identity (Similarity ↔ Diversity): {metrics_2speaker['speaker_identity']:.2f}/10\")\n",
+    "print(f\"Speaker Fluidity (Malleability ↔ Consistency): {metrics_2speaker['speaker_fluidity']:.2f}/10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "b07cd4b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[DEBUG] compute_conclusiveness_score called\n",
+      "[DEBUG] Corpus type: <class 'convokit.model.corpus.Corpus'>\n",
+      "[DEBUG] Retrieved 46 utterances\n",
+      "[DEBUG] Counts - Strong agree: 13, Moderate agree: 14\n",
+      "[DEBUG] Counts - Strong disagree: 2, Moderate disagree: 36\n",
+      "[DEBUG] Total agreement: 40, Total disagreement: 40\n",
+      "\\n=== 2-Speaker Results ===\n",
+      "Dynamic (Collaborative ↔ Competitive): 5.32/10\n",
+      "Conclusiveness (Consensus ↔ Divergence): 5.00/10\n",
+      "Speaker Identity (Similarity ↔ Diversity): 5.25/10\n",
+      "Speaker Fluidity (Malleability ↔ Consistency): 4.65/10\n"
+     ]
+    }
+   ],
+   "source": [
+    "metrics_2speaker = evaluate_conversation(conv_2speaker)\n",
+    "\n",
+    "print(\"\\\\n=== 2-Speaker Results ===\")\n",
+    "print(f\"Dynamic (Collaborative ↔ Competitive): {metrics_2speaker['dynamic']:.2f}/10\")\n",
+    "print(f\"Conclusiveness (Consensus ↔ Divergence): {metrics_2speaker['conclusiveness']:.2f}/10\")\n",
+    "print(f\"Speaker Identity (Similarity ↔ Diversity): {metrics_2speaker['speaker_identity']:.2f}/10\")\n",
+    "print(f\"Speaker Fluidity (Malleability ↔ Consistency): {metrics_2speaker['speaker_fluidity']:.2f}/10\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "1051aae4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\nRunning 3-speaker conversation with implicit personas...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Running 3-speaker conversation: 100%|██████████| 33/33 [07:43<00:00, 14.05s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\n=== 3-Speaker Results ===\n",
+      "Dynamic (Collaborative ↔ Competitive): 5.43/10\n",
+      "Conclusiveness (Consensus ↔ Divergence): 5.00/10\n",
+      "Speaker Identity (Similarity ↔ Diversity): 5.26/10\n",
+      "Speaker Fluidity (Malleability ↔ Consistency): 4.82/10\n"
+     ]
+    }
+   ],
    "source": [
     "# Run 3-speaker conversation\n",
     "print(\"\\\\nRunning 3-speaker conversation with implicit personas...\")\n",
